--- a/.github/workflows/nba.yml
+++ b/.github/workflows/nba.yml
@@ -1,22 +1,34 @@
-name: NBA Processor
+name: Run NBA Video Bot
+
 on:
   schedule:
-    - cron: '30 15 * * *'  # 10:30 AM EST
+    - cron: '30 14 * * *'  # 10:30 AM EST (14:30 UTC)
   workflow_dispatch:
+
 jobs:
-  process-nba:
+  run-bot:
     runs-on: ubuntu-latest
-    env:
-      GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-      REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
-      REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
-      OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+    
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    - run: |
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
+        sudo apt-get update
         sudo apt-get install -y ffmpeg
-    - run: python NBA.py
+        
+    - name: Run NBA bot
+      env:
+        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+        OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+        GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+      run: python NBA.py
