--- a/.github/workflows/run_nfl.yml
+++ b/.github/workflows/run_nfl.yml
@@ -18,13 +18,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install praw==7.8.1 yt-dlp==2024.4.9 google-api-python-client==2.104.0 requests==2.31.0
           sudo apt-get update
           sudo apt-get install -y ffmpeg
           
-      - name: Setup cookies
-        run: echo "${{ secrets.COOKIES_BASE64 }}" | base64 --decode > cookies.txt
-        
       - name: Run NFL Bot
         env:
           REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
