--- a/.github/workflows/run_nfl.yml
+++ b/.github/workflows/run_nfl.yml
@@ -1,33 +1,34 @@
-name: NFL Video Processor
+name: Run NFL Video Bot
 
 on:
   schedule:
-    - cron: '30 15 * * *'  # 10:30 AM EST (15:30 UTC)
+    - cron: '30 14 * * *'  # 10:30 AM EST (14:30 UTC)
   workflow_dispatch:
 
 jobs:
-  process_videos:
+  run-bot:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
-    
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         sudo apt-get update
         sudo apt-get install -y ffmpeg
-    
-    - name: Run NFL Video Processor
+        
+    - name: Run NFL bot
       env:
         REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
         REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
         OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      run: |
-        python NFL.py
+        GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+      run: python NFL.py
