--- a/.github/workflows/run_nfl.yml
+++ b/.github/workflows/run_nfl.yml
@@ -25,6 +25,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y ffmpeg
         
+    - name: Create cookies.txt
+      run: echo "${{ secrets.REDDIT_COOKIES }}" > cookies.txt
+        
     - name: Run NFL bot
       env:
         REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
