--- a/.github/workflows/run_cats.yml
+++ b/.github/workflows/run_cats.yml
@@ -30,4 +30,4 @@ jobs:
         REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
         REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
         GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-      run: python cats.py
+      run: python Cats.py
