--- a/.github/workflows/run_nfl.yml
+++ b/.github/workflows/run_nfl.yml
@@ -8,24 +8,27 @@ on:
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        # Install yt-dlp nightly (with all extras) so force_ipv4 & latest extractors are available
+        pip install -U --pre "yt-dlp[all]"
+        # Then install the rest of your requirements
         pip install -r requirements.txt
         sudo apt-get update
         sudo apt-get install -y ffmpeg
-        
-    - name: Run NFL bot
+
+    - name: Run NFL-2 Video Bot
       env:
         REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
         REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
