--- a/.github/workflows/run_nfl.yml
+++ b/.github/workflows/run_nfl.yml
@@ -2,7 +2,7 @@ name: Run NFL Video Bot
 
 on:
   schedule:
-    - cron: '30 14 * * *'  # 10:30 AM EST
+    - cron: '30 14 * * *'  # 10:30 AM EST (14:30 UTC)
   workflow_dispatch:
 
 jobs:
@@ -10,14 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # 1) Checkout your repo
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # 2) Install Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
+    # 3) Install dependencies (including yt-dlp nightly)
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -26,22 +29,26 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y ffmpeg
 
+    # 4) Debug—ensure both cookie files are checked out
+    - name: Debug cookie files
+      run: |
+        echo "Files in repo root:"
+        ls -1 .
+
+    # 5) Merge Reddit + YouTube cookies into one cookies.txt
     - name: Merge Reddit & YouTube cookies
       run: |
-        # preserve the Netscape header
         head -n 3 cookies.txt > merged_cookies.txt
-        # append the rest of reddit cookies
-        tail -n +4 cookies.txt >> merged_cookies.txt
-        # append the rest of YouTube cookies
+        tail -n +4 cookies.txt     >> merged_cookies.txt
         tail -n +4 YT_Cookies.txt >> merged_cookies.txt
-        # overwrite cookies.txt
         mv merged_cookies.txt cookies.txt
         echo "✅ cookies.txt now contains both Reddit & YouTube cookies"
 
+    # 6) Run your Python script
     - name: Run NFL-2 Video Bot
       env:
-        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
-        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
-        OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-        GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+        REDDIT_CLIENT_ID:      ${{ secrets.REDDIT_CLIENT_ID }}
+        REDDIT_CLIENT_SECRET:  ${{ secrets.REDDIT_CLIENT_SECRET }}
+        OPENROUTER_API_KEY:    ${{ secrets.OPENROUTER_API_KEY }}
+        GDRIVE_SERVICE_ACCOUNT:${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
       run: python NFL-2.py
