--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -2,30 +2,34 @@ name: Run Poly Video Bot
 
 on:
   schedule:
-    - cron: '30 14 * * *'  # Adjust as needed (10:30 AM EST = 14:30 UTC)
+    - cron: '30 14 * * *'  # 10:30 AM EST (14:30 UTC)
   workflow_dispatch:
 
 jobs:
-  run-bot:
+  run-poly:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg
+      - name: Install dependencies & browsers
+        run: |
+          python -m pip install --upgrade pip
+          pip install -U --pre "yt-dlp[all]"
+          pip install -r requirements.txt
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
+          echo "CHROME_BIN=/usr/bin/chromium-browser" >> $GITHUB_ENV
+          echo "CHROMEDRIVER_PATH=/usr/bin/chromedriver" >> $GITHUB_ENV
 
-    - name: Run Poly Video Bot
-      env:
-        GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-      run: python poly.py
+      - name: Run Poly Bot
+        env:
+          OPENROUTER_API_KEY:    ${{ secrets.OPENROUTER_API_KEY }}
+          GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+        run: python poly.py
