--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -2,34 +2,33 @@ name: Run Poly Video Bot
 
 on:
   schedule:
-    - cron: '30 14 * * *'  # 10:30 AM EST (14:30 UTC)
+    - cron: '30 14 * * *'   # 10:30 AM EST
   workflow_dispatch:
 
 jobs:
-  run-poly:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install dependencies & browsers
+      - name: Install system deps
+        run: sudo apt-get update && sudo apt-get install -y ffmpeg
+
+      - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
+          pip install snscrape
           pip install -U --pre "yt-dlp[all]"
-          pip install -r requirements.txt
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
-          echo "CHROME_BIN=/usr/bin/chromium-browser" >> $GITHUB_ENV
-          echo "CHROMEDRIVER_PATH=/usr/bin/chromedriver" >> $GITHUB_ENV
+          pip install requests google-api-python-client google-auth
 
-      - name: Run Poly Bot
+      - name: Run poly.py
         env:
-          OPENROUTER_API_KEY:    ${{ secrets.OPENROUTER_API_KEY }}
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
         run: python poly.py
