--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -31,4 +31,5 @@ jobs:
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+          PYTHONHTTPSVERIFY: '0'
         run: python poly.py
