--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -35,4 +35,5 @@ jobs:
         env:
           OPENROUTER_API_KEY:     ${{ secrets.OPENROUTER_API_KEY }}
           GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+          REQUESTS_CA_BUNDLE:     /etc/ssl/certs/ca-certificates.crt
         run: python poly.py
