--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install system deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg ca-certificates
+          sudo apt-get install -y ffmpeg
 
       - name: Install Python deps
         run: |
@@ -33,5 +33,4 @@ jobs:
         env:
           OPENROUTER_API_KEY:     ${{ secrets.OPENROUTER_API_KEY }}
           GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-          REQUESTS_CA_BUNDLE:     /etc/ssl/certs/ca-certificates.crt
         run: python poly.py
