--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install system deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg
+          sudo apt-get install -y ffmpeg ca-certificates
 
       - name: Install Python deps
         run: |
