--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          pip install snscrape
+          pip install certifi snscrape
           pip install -U --pre "yt-dlp[all]"
           pip install requests google-api-python-client google-auth
 
