--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -1,30 +1,46 @@
-name: Run Poly Bot
+# .github/workflows/run_poly.yml
+name: Run Poly Bot
 
 on:
   schedule:
-    - cron: '30 14 * * *'   # 10:30 AM EST
+    - cron: '30 14 * * *'      # 10 :30 AM EST / 14 :30 UTC
   workflow_dispatch:
 
 jobs:
-  build:
+  run-bot:
     runs-on: ubuntu-latest
     env:
-      OPENROUTER_API_KEY:     ${{ secrets.OPENROUTER_API_KEY }}
+      OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-
+      PYTHONHTTPSVERIFY: 0      # blunt SSL bypass
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install deps
+      - name: Install system packages
         run: |
-          sudo apt-get update -qq
+          sudo apt-get update
           sudo apt-get install -y ffmpeg
-          python -m pip install --upgrade pip
-          pip install snscrape "yt-dlp[all]" requests google-api-python-client google-auth
 
-      - name: Run bot
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --pre 'yt-dlp[all]'
+          pip install snscrape requests==2.31.0 'urllib3<2.2' certifi \
+                     google-api-python-client google-auth google-auth-httplib2 google-auth-oauthlib
+          # refresh CA store so every library sees certifi’s bundle
+          CERT_BUNDLE=$(python - <<'PY'
+import certifi, sys, json
+print(certifi.where())
+PY
+)
+          sudo cp "$CERT_BUNDLE" /etc/ssl/certs/ca-certificates.crt
+          sudo update-ca-certificates
+
+      - name: Run Poly script
         run: python poly.py
