--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -3,7 +3,7 @@ name: Run Poly Bot
 
 on:
   schedule:
-    - cron: '30 14 * * *'      # 10 :30 AM EST / 14 :30 UTC
+    - cron: '30 14 * * *'      # 10:30 AM EST
   workflow_dispatch:
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
     env:
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-      PYTHONHTTPSVERIFY: 0      # blunt SSL bypass
+      PYTHONHTTPSVERIFY: 0
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -25,27 +25,23 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg
+          sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
 
-          - name: Install Python dependencies
-      run: |
-        # --- Python packages ---
-        python -m pip install --upgrade pip
-        pip install --pre 'yt-dlp[all]'
-        pip install snscrape requests==2.31.0 'urllib3<2.2' certifi \
-                   google-api-python-client google-auth google-auth-httplib2 google-auth-oauthlib
-
-        # --- Trust‑store fix (NEW) ---
-        CERT=$(python - <<'PY'
-import certifi, sys
-print(certifi.where())
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --pre 'yt-dlp[all]'
+          pip install selenium requests==2.31.0 'urllib3<2.2' certifi \
+                      google-api-python-client google-auth google-auth-httplib2 google-auth-oauthlib
+          # refresh CA store for requests/OpenRouter
+          CERT=$(python - <<'PY'
+import certifi; print(certifi.where())
 PY
 )
-        sudo cp "$CERT" /etc/ssl/certs/ca-certificates.crt    # overwrite bundle
-        sudo update-ca-certificates                           # refresh OpenSSL cache
-        echo "REQUESTS_CA_BUNDLE=$CERT" >> $GITHUB_ENV        # export for Python libs
-        echo "SSL_CERT_FILE=$CERT"     >> $GITHUB_ENV
-
+          sudo cp "$CERT" /etc/ssl/certs/ca-certificates.crt
+          sudo update-ca-certificates
+          echo "REQUESTS_CA_BUNDLE=$CERT" >> $GITHUB_ENV
+          echo "SSL_CERT_FILE=$CERT"     >> $GITHUB_ENV
 
       - name: Run Poly script
         run: python poly.py
