--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -1,9 +1,9 @@
 # .github/workflows/run_poly.yml
-name: Run Poly Bot
+name: Run Poly Bot
 
 on:
   schedule:
-    - cron: '30 14 * * *'      # 10:30 AM EST
+    - cron: '30 14 * * *'    # 10:30 AM EST
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -33,7 +33,7 @@ jobs:
           pip install --pre 'yt-dlp[all]'
           pip install selenium requests==2.31.0 'urllib3<2.2' certifi \
                       google-api-python-client google-auth google-auth-httplib2 google-auth-oauthlib
-          # refresh CA store for requests/OpenRouter
+          # refresh CA store
           CERT=$(python - <<'PY'
 import certifi; print(certifi.where())
 PY
