--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -1,46 +1,36 @@
-name: Run Poly Bot
+# .github/workflows/run_poly.yml
+name: Run Poly Video Bot
 
 on:
   schedule:
-    - cron: '30 14 * * *'    # 10:30 AM EST
+    - cron: '30 14 * * *'  # 10:30 AM EST (14:30 UTC)
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    env:
-      OPENROUTER_API_KEY:   ${{ secrets.OPENROUTER_API_KEY }}
-      GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
-      PYTHONHTTPSVERIFY:     0
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install system packages
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install --pre "yt-dlp[all]"
+        pip install selenium requests==2.31.0 "urllib3<2.2" certifi \
+                    google-api-python-client google-auth google-auth-httplib2 google-auth-oauthlib
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install --pre 'yt-dlp[all]'
-          pip install selenium requests==2.31.0 'urllib3<2.2' certifi \
-                      google-api-python-client google-auth google-auth-httplib2 google-auth-oauthlib
-          # refresh CA store
-          CERT=$(python - <<'PY'
-import certifi; print(certifi.where())
-PY
-)
-          sudo cp "$CERT" /etc/ssl/certs/ca-certificates.crt
-          sudo update-ca-certificates
-          echo "REQUESTS_CA_BUNDLE=$CERT" >> $GITHUB_ENV
-          echo "SSL_CERT_FILE=$CERT"     >> $GITHUB_ENV
-
-      - name: Run Poly script
-        run: python poly.py
+    - name: Run Poly Video Bot
+      env:
+        OPENROUTER_API_KEY:     ${{ secrets.OPENROUTER_API_KEY }}
+        GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+        PYTHONHTTPSVERIFY:      0
+      run: python poly.py
