--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -23,10 +23,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --pre "yt-dlp[all]"
-        pip install selenium requests==2.31.0 "urllib3<2.2" certifi \
+        pip install requests==2.31.0 "urllib3<2.2" certifi \
                     google-api-python-client google-auth google-auth-httplib2 google-auth-oauthlib
         sudo apt-get update
-        sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
+        sudo apt-get install -y ffmpeg
 
     - name: Run Poly Video Bot
       env:
