--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -21,13 +21,13 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y ffmpeg
+        sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
 
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install snscrape yt-dlp[all] --pre
-        pip install requests==2.31.0 "urllib3<2.2" certifi google-api-python-client google-auth
+        pip install yt-dlp[all] --pre
+        pip install requests==2.31.0 "urllib3<2.2" certifi google-api-python-client google-auth selenium webdriver-manager
 
     - name: Configure SSL
       run: |
@@ -39,4 +39,6 @@ jobs:
         OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
         GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
         PYTHONHTTPSVERIFY: 0
-      run: python poly.py
+      run: |
+        export PATH=$PATH:/usr/lib/chromium-browser/
+        python poly.py
