--- a/.github/workflows/run_poly.yml
+++ b/.github/workflows/run_poly.yml
@@ -21,7 +21,12 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y ffmpeg chromium-browser chromium-chromedriver
+        sudo apt-get install -y ffmpeg wget
+        # Install Chrome
+        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+        echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
 
     - name: Install Python dependencies
       run: |
@@ -40,5 +45,7 @@ jobs:
         GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
         PYTHONHTTPSVERIFY: 0
       run: |
-        export PATH=$PATH:/usr/lib/chromium-browser/
+        # Set ChromeDriver path
+        export CHROMEDRIVER_PATH=$(which chromedriver)
+        export GOOGLE_CHROME_BIN=$(which google-chrome-stable)
         python poly.py
