--- a/.github/workflows/youtube-clipper.yml
+++ b/.github/workflows/youtube-clipper.yml
@@ -1,29 +1,27 @@
-name: Run YouTube Clipper
+name: Run YouTube Clipper & Upload
 
 on:
   schedule:
-    # 10:30 AM Eastern Time every day
-    - cron: '30 14 * * *'
+    - cron: '30 14 * * *'       # 10:30 AM Eastern
   workflow_dispatch:
     inputs:
       urls:
-        description: 'Space-separated YouTube URLs to clip'
-        required: false
+        description: 'Space-separated YouTube URLs'
+        required: true
         default: 'https://www.youtube.com/watch?v=52xav2LdFuk'
       output:
-        description: 'Name of the output file'
+        description: 'Output filename'
         required: false
         default: 'highlights_combined.mp4'
 
 jobs:
-  clip:
+  build-and-run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -31,13 +29,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install yt_dlp scenedetect pydub
+          pip install yt_dlp scenedetect pydub opencv-python google-api-python-client google-auth
           sudo apt-get update
           sudo apt-get install -y ffmpeg
 
-      - name: Run YouTube Clipper
+      - name: Run clipper & upload
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/service_account.json
         run: |
-          # Use the URLs from either the scheduled defaults or the manual input
           python youtube_clipper.py \
             --urls ${{ github.event.inputs.urls }} \
             --output ${{ github.event.inputs.output }}
