--- a/.github/workflows/upload-impulse.yml
+++ b/.github/workflows/upload-impulse.yml
@@ -9,8 +9,7 @@ jobs:
   upload-impulse:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
