--- a/.github/workflows/cleanup_drive.yml
+++ b/.github/workflows/cleanup_drive.yml
@@ -1,4 +1,4 @@
-name: Cleanup Drive
+name: Cleanup Service Account Drive
 
 on:
   workflow_dispatch:
@@ -6,8 +6,22 @@ on:
 jobs:
   cleanup:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
 
-      - name: Set up
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install google-api-python-client google-auth google-auth-oauthlib
+
+    - name: Run cleanup script
+      env:
+        GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+      run: python cleanup_drive.py
