--- a/.github/workflows/cleanup_drive.yml
+++ b/.github/workflows/cleanup_drive.yml
@@ -1,7 +1,8 @@
 name: Cleanup Service Account Drive
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '0 20 1,21 * *'  # Runs at 20:00 UTC on the 1st and 21st of every month
 
 jobs:
   cleanup:
