--- a/.github/workflows/upload-impulse.yml
+++ b/.github/workflows/upload-impulse.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install google-api-python-client google-auth google-auth-httplib2
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
 
       - name: Run Impulse uploader
         env:
