Fix YouTube clipper workflow issues
- Added missing GOOGLE_SHEETS_CREDENTIALS environment variable
- Made clip_video_simple.py independent by copying functions from NBA.py
- Prevents import dependency issues that were causing workflow failures

--- a/.github/workflows/yt_clip.yml
+++ b/.github/workflows/yt_clip.yml
@@ -55,5 +55,6 @@ jobs:
       env:
         OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
         GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
+        GOOGLE_SHEETS_CREDENTIALS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
       run: |
         python clip_video_simple.py "${{ github.event.inputs.youtube_link }}" "${{ github.event.inputs.num_clips }}" "${{ github.event.inputs.drive_folder }}" 
