--- a/.github/workflows/yt_clip.yml
+++ b/.github/workflows/yt_clip.yml
@@ -57,4 +57,4 @@ jobs:
         GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
         GOOGLE_SHEETS_CREDENTIALS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
       run: |
-        python clip_video_simple.py "${{ github.event.inputs.youtube_link }}" "${{ github.event.inputs.num_clips }}" "${{ github.event.inputs.drive_folder }}" 
+        python clip_video_simple.py "${{ github.event.inputs.youtube_link }}" "${{ github.event.inputs.num_clips }}" "${{ github.event.inputs.drive_folder }}" "Cookies_YT_2.txt" 
