--- a/.github/workflows/top5generator.yml
+++ b/.github/workflows/top5generator.yml
@@ -23,7 +23,7 @@ jobs:
         pip install -r requirements.txt
     - name: Generate Top 5 Video
       env:
-        HIGHLIGHTLY_API_KEY: ${{ secrets.HIGHLIGHTLY_API_KEY }}
+        RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
         GDRIVE_SERVICE_ACCOUNT: ${{ secrets.GDRIVE_SERVICE_ACCOUNT }}
       run: |
         python create_top5_video.py
